force-app/main/default/objects/WTN_Waste_Category__c/WTN_Waste_Category__c.object-meta.xml
<CustomObject>
    <label>WTN Waste Category</label>
    <nameField>
        <displayFormat>WTN{YYYY}{MM}-{0}</displayFormat>
        <label>WTN Waste Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WTN Waste Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>