force-app/main/default/objects/WTN_Waste_Category__c/fields/ConsignmentNote_PackingGroups__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentNote_PackingGroups__c</fullName>
    <label>Packing Groups</label>
    <length>50</length>
    <type>Text</type>
</CustomField>