force-app/main/default/objects/WTN_Waste_Category__c/fields/ConsignmentNote_ProperShippingNames__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentNote_ProperShippingNames__c</fullName>
    <label>Proper Shipping Names</label>
    <length>50</length>
    <type>Text</type>
</CustomField>