force-app/main/default/objects/WTN_Waste_Category__c/fields/Enqix_Key__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Key__c</fullName>
    <externalId>true</externalId>
    <label>Enqix Key</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>