force-app/main/default/objects/WTN_Waste_Category__c/fields/Manual_Summary__c.field-meta.xml
<CustomField>
    <fullName>Manual_Summary__c</fullName>
    <label>Manual Summary</label>
    <length>30</length>
    <type>Text</type>
</CustomField>