force-app/main/default/objects/WTN_Waste_Category__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>WTN Waste Categories</relationshipLabel>
    <relationshipName>WTN_Waste_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>