force-app/main/default/objects/WTN_Waste_Category__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <formula>BLANKVALUE(
    Manual_Summary__c,
    IF(
        Quantity__c &gt; 0,
        TEXT(Quantity__c) &amp; &quot; x &quot; &amp; Product__r.Name,
        &quot;&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Summary</label>
    <type>Text</type>
</CustomField>