force-app/main/default/objects/WTN_Waste_Category__c/fields/TempComplianceDocumentID__c.field-meta.xml
<CustomField>
    <fullName>TempComplianceDocumentID__c</fullName>
    <label>Temp Compliance Document ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>