force-app/main/default/objects/WTN_Waste_Category__c/fields/Waste_Category__c.field-meta.xml
<CustomField>
    <fullName>Waste_Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Waste Category</label>
    <referenceTo>Waste_Category__c</referenceTo>
    <relationshipLabel>WTN Waste Categories</relationshipLabel>
    <relationshipName>WTN_Waste_Categories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>