force-app/main/default/objects/WTN_Waste_Category__c/fields/WTN__c.field-meta.xml
<CustomField>
    <fullName>WTN__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Waste Transfer Note</label>
    <referenceTo>Compliance_Doc__c</referenceTo>
    <relationshipLabel>WTN Waste Categories</relationshipLabel>
    <relationshipName>WTN_Waste_Categories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>