force-app/main/default/objects/WTN_Waste_Category__c/validationRules/RestrictNonAdHocWTNProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictNonAdHocWTNProduct</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Permission.AllowNonAdHocWTNProduct), WTN__r.RecordType.DeveloperName = &apos;WTN&apos;, BEGINS(WTN__r.Name, &apos;AdHoc WTN&apos;), OR(ISBLANK(Product__c), TEXT(Product__r.WTN_Product__c) != &apos;Ad-Hoc&apos;))</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Product is required, and its WTN Product must be AdHoc WTN.</errorMessage>
</ValidationRule>