force-app/main/default/objects/WTN_Waste_Category__c/validationRules/RestrictNonSeasonWTNProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictNonSeasonWTNProduct</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Permission.AllowNonSeasonWTNProduct), WTN__r.RecordType.DeveloperName = &apos;WTN&apos;, BEGINS(WTN__r.Name, &apos;Season Ticket WTN&apos;), OR(ISBLANK(Product__c), TEXT(Product__r.WTN_Product__c) != &apos;Season Ticket&apos;))</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Product is required, and its WTN Product must be Season Ticket.</errorMessage>
</ValidationRule>